[package]
name = "clima"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] } # Para hacer la petición HTTP y manejar JSON
    serde = { version = "1.0", features = ["derive"] }           # Para la serialización/deserialización
    serde_json = "1.0"                                        # Implementación específica de JSON para serde
    tokio = { version = "1", features = ["full"] } 
